[metadata]
name = nodzz
version = 0.1.0
author = Dusk Forge
author_email = duskforge@protonmail.com
description = Pure Python behavior trees framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/duskforge/nodzz
project_urls =
    Bug Tracker = https://github.com/duskforge/nodzz/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = nodzz
install_requires =
    pydantic >=1.8.2
    pyyaml >=5.4.1
python_requires = >=3.8
