[metadata]
name = nodzz
version = 0.2.0
author = Dusk Forge
author_email = duskforge@protonmail.com
description = Pure Python behavior trees framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/duskforge/nodzz
project_urls =
    Bug Tracker = https://github.com/duskforge/nodzz/issues
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
install_requires =
    pydantic >=1.8.2
    pyyaml >=5.4.1
python_requires = >=3.8
